--- a/Gen_Plaza/app/src/main/res/layout/content_main.xml
+++ b/Gen_Plaza/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,8 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        ></androidx.recyclerview.widget.RecyclerView>
+>
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
